--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,8 @@
         {
             "label": "build",
             "type": "shell",
-            "command": "make re", // Use the appropriate command for your Makefile
+            "command": "make", // Use the appropriate command for your Makefile
+            "args": ["re"], // Pass the target as an argument
             "group": {
                 "kind": "build",
                 "isDefault": true
@@ -12,3 +13,4 @@
         }
     ]
 }
+
